--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TelstraAssignment</string>
+    <string name="retry">Retry</string>
+    <string name="post_error">An error occurred while loading the facts</string>
 </resources>
